--- a/index.html
+++ b/index.html
@@ -29,21 +29,15 @@
     overflow: hidden;
   }
 
-  /* Selfie + Name + Verified */
+  /* Name + Verified Badge */
   .profile-header {
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 1rem;
+    gap: 0.5rem;
     margin-bottom: 1rem;
-    z-index: 10;
     position: relative;
-  }
-  .profile-header img.profile-photo {
-    width: 60px; height: 60px;
-    border-radius: 50%;
-    object-fit: cover;
-    border: 2px solid #FF69B4;
+    z-index: 10;
   }
   .profile-header h1 {
     font-size: 3rem;
@@ -116,14 +110,14 @@
     margin-top: 3rem;
     height: 350px;
   }
-  #nezuko-animation { width: 240px; height: 350px; z-index: 1; position: relative; }
+  #nezuko-animation { width: 240px; height: 350px; z-index: 2; position: relative; }
   #particles-js {
     position: absolute;
     width: 100%;
     height: 100%;
     top: 0; left: 0;
     pointer-events: none;
-    z-index: 0;
+    z-index: 1;
   }
 
   /* Footer & Quotes */
@@ -141,11 +135,10 @@
 
 <header>
   <div class="profile-header">
-    <img class="profile-photo" src="selfie.jpg" alt="Robin Ace Tapang">
     <h1>Robin Ace Tapang <img class="verified-badge" src="verified-blue-badge.png" alt="Verified"></h1>
   </div>
   <p>
-    I am a highly motivated Bachelor of Industrial Technology undergraduate majoring in Computer Technology. As a third-year student, I have developed strong knowledge in software, hardware, and network systems. I am proficient in programming languages including C++, Python, and JavaScript, and I am experienced with database management including SQL. I am also skilled in Microsoft and Google productivity apps, IDEs, and other software platforms, alongside practical troubleshooting, computer maintenance, and basic networking configuration. My goal is to leverage these skills to develop innovative IT solutions and contribute meaningfully in both academic and professional environments.
+    I am a highly motivated Bachelor of Industrial Technology undergraduate majoring in Computer Technology. As a third-year student, I have developed strong knowledge in software, hardware, and network systems. I am proficient in programming languages including C++, Python, and JavaScript, and I am experienced with database management including SQL. I am also skilled in Microsoft and Google productivity apps, IDEs, and other software platforms. My expertise extends to hardware troubleshooting, system maintenance, and computer networking. I aim to leverage these skills to develop innovative IT solutions and contribute meaningfully to academic and professional technology environments.
   </p>
 
   <div style="margin-top: 2rem;">
@@ -240,7 +233,7 @@
 <script src="https://cdn.jsdelivr.net/npm/tsparticles"></script>
 
 <script>
-  // AOS Initialization
+  // Initialize AOS
   AOS.init({ duration: 1200 });
 
   // Load Nezuko Lottie Animation
@@ -249,10 +242,10 @@
     renderer: 'svg',
     loop: true,
     autoplay: true,
-    path: 'nezuko_animation.json' // Replace with your Lottie JSON
+    path: 'nezuko_animation.json' // Replace with correct path
   });
 
-  // Advanced Demon Slayer Anime Cinematic Particles
+  // Cinematic Demon Slayer Particles
   tsParticles.load("particles-js", {
     fpsLimit: 60,
     interactivity: {
@@ -262,22 +255,19 @@
         onclick: { enable: true, mode: "push" },
         resize: true
       },
-      modes: {
-        repulse: { distance: 150, duration: 0.6 },
-        push: { quantity: 5 }
-      }
+      modes: { repulse: { distance: 150, duration: 0.6 }, push: { quantity: 5 } }
     },
     particles: {
-      number: { value: 100 },
+      number: { value: 120 },
       color: { value: ["#FF4500","#1E90FF","#00FA9A","#800080","#FFD700"] },
       shape: { type: "circle" },
       opacity: { value: 0.9, random: true },
       size: { value: { min: 2, max: 6 }, random: true },
-      move: { enable: true, speed: 4, direction: "none", random: true, straight: false, out_mode: "out", attract: { enable: false } }
+      move: { enable: true, speed: 4, direction: "none", random: true, straight: false, out_mode: "out" }
     }
   });
 
-  // Motivating Quotes Randomizer
+  // Motivating Quotes
   const quotes = [
     "Believe in yourself! / Manalig sa sarili mo! / Kendine inan!",
     "Every step counts. / Bawat hakbang mahalaga. / Her adım önemlidir.",
